[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand.gd" type="Script" id=2]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand_idle.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand_simple_attack.gd" type="Script" id=4]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand_drop_drag.gd" type="Script" id=5]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand_hit_wall.gd" type="Script" id=6]
[ext_resource path="res://actors/enemies/small_boss/small_boss_hand/small_boss_hand_wait.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/hand_right:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/hand_right:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/hand_right:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="small_boss_hand" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="dust_pos_left" type="Position2D" parent="rotate"]
position = Vector2( -4, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="dust_pos_right" type="Position2D" parent="rotate"]
position = Vector2( 12, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="hand_right" type="Sprite" parent="rotate"]
texture = ExtResource( 1 )
offset = Vector2( 0, -13 )
region_enabled = true
region_rect = Rect2( 144, 0, 32, 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 3 )

[node name="simple_attack" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="drop_drag" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="hit_wall" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="wait" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="anim_fx" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/default = SubResource( 2 )
anims/land = SubResource( 3 )

[node name="ceiling_dust_layer" type="CanvasLayer" parent="."]
